Adicionado casos de teste extras, melhorado javadoc